--- a/Blasphemous/Blasphemous.vcxproj.filters
+++ b/Blasphemous/Blasphemous.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="2D FrameWork\PCH">
       <UniqueIdentifier>{38668fcf-e892-49a8-b564-dc2c4793fcb8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Scene1">
+      <UniqueIdentifier>{f16f43c3-cca7-4b6d-9001-3b04e8b20ac7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h" />
@@ -56,10 +59,16 @@
     <ClInclude Include="FontManager.h">
       <Filter>2D FrameWork\FrameWorkManager</Filter>
     </ClInclude>
-    <ClInclude Include="BaseMap.h" />
-    <ClInclude Include="Player.h" />
     <ClInclude Include="BossMap.h" />
-    <ClInclude Include="BattleField.h" />
+    <ClInclude Include="BaseMap.h">
+      <Filter>Scene1</Filter>
+    </ClInclude>
+    <ClInclude Include="BattleField.h">
+      <Filter>Scene1</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Scene1</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp" />
@@ -86,9 +95,15 @@
     <ClCompile Include="FontManager.cpp">
       <Filter>2D FrameWork\FrameWorkManager</Filter>
     </ClCompile>
-    <ClCompile Include="BaseMap.cpp" />
-    <ClCompile Include="Player.cpp" />
     <ClCompile Include="BossMap.cpp" />
-    <ClCompile Include="BattleField.cpp" />
+    <ClCompile Include="BaseMap.cpp">
+      <Filter>Scene1</Filter>
+    </ClCompile>
+    <ClCompile Include="BattleField.cpp">
+      <Filter>Scene1</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Scene1</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
