--- a/Blasphemous/Blasphemous.vcxproj
+++ b/Blasphemous/Blasphemous.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="BattleField.h" />
     <ClInclude Include="BossMap.h" />
     <ClInclude Include="CommonMacroFucntion.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="FontManager.h" />
     <ClInclude Include="GameNode.h" />
     <ClInclude Include="GImage.h" />
@@ -160,12 +161,15 @@
     <ClInclude Include="SingletonBase.h" />
     <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Stdafx.h" />
+    <ClInclude Include="Tutorial.h" />
+    <ClInclude Include="TutorialField.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Acolyte.cpp" />
     <ClCompile Include="BaseMap.cpp" />
     <ClCompile Include="BattleField.cpp" />
     <ClCompile Include="BossMap.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FontManager.cpp" />
     <ClCompile Include="GameNode.cpp" />
     <ClCompile Include="GImage.cpp" />
@@ -176,6 +180,8 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Stdafx.cpp" />
+    <ClCompile Include="Tutorial.cpp" />
+    <ClCompile Include="TutorialField.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
