이미지 싱크 맞추기 및 전투

--- a/Blasphemous/Blasphemous.vcxproj
+++ b/Blasphemous/Blasphemous.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="BaseMap.h" />
     <ClInclude Include="BattleField.h" />
     <ClInclude Include="BossMap.h" />
+    <ClInclude Include="BossStage.h" />
     <ClInclude Include="CommonMacroFucntion.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="FontManager.h" />
@@ -169,6 +170,7 @@
     <ClCompile Include="BaseMap.cpp" />
     <ClCompile Include="BattleField.cpp" />
     <ClCompile Include="BossMap.cpp" />
+    <ClCompile Include="BossStage.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="FontManager.cpp" />
     <ClCompile Include="GameNode.cpp" />
