아이템 생성 및 인벤토리 구현

--- a/Blasphemous/Blasphemous.vcxproj.filters
+++ b/Blasphemous/Blasphemous.vcxproj.filters
@@ -96,6 +96,8 @@
       <Filter>Boss</Filter>
     </ClInclude>
     <ClInclude Include="Effect.h" />
+    <ClInclude Include="Inventory.h" />
+    <ClInclude Include="Item.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp" />
@@ -150,5 +152,7 @@
       <Filter>Boss</Filter>
     </ClCompile>
     <ClCompile Include="Effect.cpp" />
+    <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="Item.cpp" />
   </ItemGroup>
 </Project>
