맵 수정(사다리 추가) 및 액션 추가 및 인벤토리 추가

--- a/Blasphemous/Blasphemous.vcxproj
+++ b/Blasphemous/Blasphemous.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="GImage.h" />
     <ClInclude Include="ImageManager.h" />
     <ClInclude Include="Inventory.h" />
+    <ClInclude Include="Isidora.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="KeyManager.h" />
     <ClInclude Include="MainGame.h" />
@@ -181,6 +182,7 @@
     <ClCompile Include="GImage.cpp" />
     <ClCompile Include="ImageManager.cpp" />
     <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="Isidora.cpp" />
     <ClCompile Include="Item.cpp" />
     <ClCompile Include="KeyManager.cpp" />
     <ClCompile Include="MainGame.cpp" />
