--- a/Blasphemous/Blasphemous.vcxproj.filters
+++ b/Blasphemous/Blasphemous.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="Stoner.h">
       <Filter>Battle</Filter>
     </ClInclude>
+    <ClInclude Include="Shielder.h">
+      <Filter>Battle</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp" />
@@ -179,6 +182,9 @@
       <Filter>Utils</Filter>
     </ClCompile>
     <ClCompile Include="Stoner.cpp">
+      <Filter>Battle</Filter>
+    </ClCompile>
+    <ClCompile Include="Shielder.cpp">
       <Filter>Battle</Filter>
     </ClCompile>
   </ItemGroup>
